Внесены поправки в микросетки

--- a/catalog.html
+++ b/catalog.html
@@ -17,11 +17,11 @@
     		   <button type="submit" name="submit-btn" class="header__search-form-button"  aria-label="Кнопка поиска"></button>
     	    </form>
     	    <a class="header__user-button" href="#" title="Закладки:">
-                <img src="img/icon-bookmark-darkgrey.svg" alt="Закладки" width="15" height="15">
+                <img src="img/icon-bookmark-white.svg" alt="Закладки" width="15" height="15">
                 <span class="header__user-button-text">Закладки: 0</span>
             </a>
     	    <a class="header__user-button" href="#" title="Корзина:">
-                <img src="img/cart-icon-darkgrey.svg" alt="Корзина" width="15" height="15">
+                <img src="img/cart-icon-white.svg" alt="Корзина" width="15" height="15">
                 <span class="header__user-button-text">Корзина: 10</span>
             </a>
     	    <a class="header__user-button header__order-button" href="order-form.html" title="Оформить заказ">Оформить заказ</a>
@@ -187,10 +187,10 @@
             </div>
     		<ul class="catalog-list">
     			<li class="catalog-item">
-    				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
     				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
     				<p class="catalog-item-old-price">22500 P.</p>
     				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
                     <div class="catalog-user-form-hidden">
@@ -199,10 +199,10 @@
                     </div>        
     			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                     <div class="catalog-user-form-hidden">
@@ -211,10 +211,10 @@
                     </div>
      			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
                    <div class="catalog-user-form-hidden">
                      <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
@@ -223,10 +223,10 @@
            <img src="img/new-flag.png" class="new-flag" width="60" height="60" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
      				<p class="catalog-item-old-price">22500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
                     <div class="catalog-user-form-hidden">
@@ -235,10 +235,10 @@
                     </div>
      			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                     <div class="catalog-user-form-hidden">
@@ -248,10 +248,10 @@
             <img src="img/new-flag.png" class="new-flag" width="60" height="60" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
                     <div class="catalog-user-form-hidden">
                       <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
@@ -259,10 +259,10 @@
                     </div>
      			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
      				<p class="catalog-item-old-price">22500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
                     <div class="catalog-user-form-hidden">
@@ -272,10 +272,10 @@
                     <img src="img/new-flag.png" class="new-flag" width="60" height="60" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                     <div class="catalog-user-form-hidden">
@@ -284,10 +284,10 @@
                     </div>
      			</li>
      			<li class="catalog-item">
-     				<a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
      				<a href="catalog-item.html" class="catalog-item-image">
                         <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                     </a>
+                    <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
                     <div class="catalog-user-form-hidden">
                       <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
@@ -390,7 +390,8 @@
       </div>
     </footer>
 
-    <section class="modal modal-cart" id="modalcart_catalog">
+    <section class="modal-container" id="modalcart_catalog">
+     <div class="modal">
       <div class="modal-cart-top">
         <img src="img/added-to-cart.svg" width="66" height="66" alt="">
         <span class="modal-cart-text">Товар добавлен в корзину!</span>
@@ -402,6 +403,7 @@
         </button>
         <button class="close-button" type="button" title="Закрыть"></button>
       </div>
+     </div>
     </section>
   </body>
 </html>
