--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
              <button type="submit" name="submit-btn" class="header__search-form-button" aria-label="Кнопка поиска"></button>
     	      </form>
     	      <a class="header__user-button" href="#" title="Закладки">
-              <img class="user-button-icon" src="img/icon-bookmark-darkgrey.svg" alt="Закладки" width="15" height="15">
+              <img class="user-button-icon" src="img/icon-bookmark-white.svg" alt="Закладки" width="15" height="15">
               <span class="header__user-button-text">Закладки: 0</span>
             </a>
             <a class="header__user-button" href="#" title="Корзина">
-              <img class="user-button-icon" src="img/cart-icon-darkgrey.svg" alt="Корзина" width="15" height="15">
+              <img class="user-button-icon" src="img/cart-icon-white.svg" alt="Корзина" width="15" height="15">
               <span class="header__user-button-text">Корзина: 10</span>
             </a>
             <a class="header__user-button header__order-button" href="order-form.html" title="Оформить заказ">Оформить заказ</a>
@@ -35,7 +35,14 @@
             <p class="header_adress-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="header-login-buttons">
-        	  <a class="sign-in-button" href="sign-in.html" title="Войти"><img src="img/icon-login.svg" alt="Войти" width="20" height="17">Войти</a>
+        	  <a class="sign-in-button" href="sign-in.html" title="Войти"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   width="20px" height="17px" viewBox="0 0 20 17" enable-background="new 0 0 20 17" xml:space="preserve">
+            <g>
+              <polygon fill="#c5c5c5" points="14.875,8.5 6,0 6,6 0,6 0,11 6,11 6,17   "/>
+            </g>
+            <path fill="#c5c5c5" d="M16.986,15.01h-5.027V17h5.027c2.178,0,3.004-1.81,3.029-3.026V3.028C19.99,1.811,19.164,0,16.986,0h-5.027
+  v1.99h5.027c0.839,0,0.992,0.681,1.01,1.057v10.904C17.979,14.327,17.825,15.01,16.986,15.01z"/>
+            </svg>Войти</a>
         	  <a class="sign-up-button" href="sign-up.html" title="Регистрация">Регистрация</a>
           </div>
         </div>
@@ -127,10 +134,10 @@
         </div>
         <ul class="main_popular-list">
             <li class="catalog-item">
-                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 9000">Перфоратор BOSCH BFG 9000</a>
                 <a href="catalog-item.html" class="catalog-item-image">
                     <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
                 </a>
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 9000">Перфоратор BOSCH BFG 9000</a>
                 <p class="catalog-item-old-price">32500 P.</p>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                 <div class="catalog-user-form-hidden">
@@ -139,10 +146,10 @@
                 </div>
             </li>
             <li class="catalog-item">
-                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
                 <a href="catalog-item.html" class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
                 </a>
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
                 <p class="catalog-item-old-price">22500 P.</p>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
                 <div class="catalog-user-form-hidden">
@@ -151,10 +158,10 @@
                 </div>
             </li>
             <li class="catalog-item">
-                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
                 <a href="catalog-item.html" class="catalog-item-image">
                     <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
                 </a>
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
                 <p class="catalog-item-old-price">30500 P.</p>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                 <div class="catalog-user-form-hidden">
@@ -163,10 +170,10 @@
                 </div>
             </li>
             <li class="catalog-item">
-                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
                 <a href="catalog-item.html" class="catalog-item-image">
                     <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                 </a>
+                <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
                 <div class="catalog-user-form-hidden">
                     <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
@@ -365,8 +372,8 @@
       </div>
     </footer>
 
-    <section class="modal modal-mail" id="mailform_index">
-      <form class="mail-form" action="/" method="post">
+    <section class="modal-container" id="mailform_index">
+      <form class="modal mail-form" action="/" method="post">
         <div class="form-block-line">
         <div class="form-block">
           <label class="mail-form-label" for="mail-form-name">Ваше имя:</label>
@@ -386,13 +393,15 @@
             <span class="send-button-text">Отправить</span>
           </button>
         </div>
+        <button class="close-button" type="button" title="Закрыть"></button>
       </form>
-      <button class="close-button" type="button" title="Закрыть"></button>
     </section>
 
-    <section class="modal modal-map" id="map_index">
+    <section class="modal-container" id="map_index">
+      <div class="modal modal-map">
       <img src="img/map.jpg" width="940" height="446" alt="Офис компании знаходится по адресу ул. Большая Конюшенная 19/8, город Санкт-Петербург">
       <button class="close-button" type="button" title="Закрыть"></button>
+    </div>
     </section>
 
   </body>
