--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
     	    <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Логотип магазина «Техномарт»"></a>
     	    <form action="/" method="post" class="header__search-form">
     		   <input type="text" name="search-form" class="header__search-form-input" placeholder="Поиск:" aria-label="Кнопка поиска">
-    		   <button type="submit" name="submit-btn" class="header__search-form-button"  aria-label="Кнопка поиска"></button>
+    		  <!-- <button type="submit" name="submit-btn" class="header__search-form-button"  aria-label="Кнопка поиска"></button> -->
     	    </form>
     	    <a class="header__user-button" href="#" title="Закладки:">
                 <img src="img/icon-bookmark-white.svg" alt="Закладки" width="15" height="15">
@@ -153,7 +153,7 @@
           </fieldset>
           <fieldset class="catalog-filter-fieldset">
     		    <legend class="catalog-filter_section-title">Питание:</legend>
-                <input type="radio" name="charge" value="option1" class="catalog-filter_charging-option" id="accumoption">
+                <input type="radio" name="charge" value="option1" class="catalog-filter_charging-option" id="accumoption" checked>
     		    <label class="catalog-filter_charge-name" for="accumoption">
                     <img src="img/radio-off.svg" width="25" height="25" alt="Кнопка неактивна" class="charge-radio-off">
                     <img src="img/radio-on.svg" width="25" height="25" alt="Кнопка активна" class="charge-radio-on"><span>Аккумуляторы</span></label>
