--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     	      <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Логотип магазина «Техномарт»"></a>
     	      <form action="/" method="post" class="header__search-form">
     		     <input type="text" name="search-form" class="header__search-form-input" placeholder="Поиск:" aria-label="Кнопка поиска">
-             <button type="submit" name="submit-btn" class="header__search-form-button" aria-label="Кнопка поиска"></button>
+             <!-- <button type="submit" name="submit-btn" class="header__search-form-button" aria-label="Кнопка поиска"></button> -->
     	      </form>
     	      <a class="header__user-button" href="#" title="Закладки">
               <img class="user-button-icon" src="img/icon-bookmark-white.svg" alt="Закладки" width="15" height="15">
@@ -22,7 +22,7 @@
             </a>
             <a class="header__user-button" href="#" title="Корзина">
               <img class="user-button-icon" src="img/cart-icon-white.svg" alt="Корзина" width="15" height="15">
-              <span class="header__user-button-text">Корзина: 10</span>
+              <span class="header__user-button-text">Корзина: 0</span>
             </a>
             <a class="header__user-button header__order-button" href="order-form.html" title="Оформить заказ">Оформить заказ</a>
           </div>
@@ -242,9 +242,9 @@
                 <input type="radio" name="slider2" class="main_service-radio" id="guarantee-slide">
                 <input type="radio" name="slider2" class="main_service-radio" id="loan-slide">
                 <div class="main_service-buttons">
-                    <label for="delivery-slide" class="main_service-label delivery-label">Доставка</label>
-                    <label for="guarantee-slide" class="main_service-label guarantee-label">Гарантия</label>
-                    <label for="loan-slide" class="main_service-label loan-label">Кредит</label>
+                    <label for="delivery-slide" class="main_service-label delivery-label" tabindex="">Доставка</label>
+                    <label for="guarantee-slide" class="main_service-label guarantee-label" tabindex="">Гарантия</label>
+                    <label for="loan-slide" class="main_service-label loan-label" tabindex="">Кредит</label>
                 </div>
                 <div class="main_service-stripe"></div>
                 <ul class="main_service-list">
@@ -279,7 +279,7 @@
     		  <p class="main_information-paragraph">Мы можем доставить вам товар в самые отдалённые точки России! <br>Техномарт работает со многими транспортными компаниями: </p>
     		  <ul class="main_our-partners-list">
     		      <li class="main_our-partners-item">Деловые линии</li>
-    		      <li class="main_our-partners-item">Авторейдинг</li>
+    		      <li class="main_our-partners-item">Автотрейдинг</li>
     		      <li class="main_our-partners-item">ЖелДорЭкспедиция</li>
     	   </ul>
     		  <a class="button" href="about-us.html" title="Подробнее о компании">Подробнее о компании</a>
