--- a/catalog.html
+++ b/catalog.html
@@ -397,7 +397,7 @@
         <span class="modal-cart-text">Товар добавлен в корзину!</span>
       </div>
       <div class="modal-cart-bottom">
-        <a class="button" href="order-form.html" alt="Оформить заказ">Оформить заказ</a> 
+        <a class="button" href="order-form.html">Оформить заказ</a> 
         <button class="button continue-button" type="button">
           <span class="continue-button-text">Продолжить покупки</span>
         </button>
