--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <!--
             <img src="img/icon-left.svg" height="40" width="22" alt="Стрелка влево">
             <img src="img/icon-right.svg" height="40" width="22" alt="Стрелка вправо">  -->
-            <button type="button" class="slide-left" aria-label="Стрелка влево"> < </button>
-            <button type="button" class="slide-right" aria-label="Стрелка вправо"> > </button>
+            <button type="button" class="slide-left" aria-label="Стрелка влево"> влево </button>
+            <button type="button" class="slide-right" aria-label="Стрелка вправо"> вправо </button>
             <div class="slider-rounds">
               <div class="round round1 active"></div>
               <div class="round round2"></div>
@@ -242,9 +242,9 @@
                 <input type="radio" name="slider2" class="main_service-radio" id="guarantee-slide">
                 <input type="radio" name="slider2" class="main_service-radio" id="loan-slide">
                 <div class="main_service-buttons">
-                    <label for="delivery-slide" class="main_service-label delivery-label" tabindex="">Доставка</label>
-                    <label for="guarantee-slide" class="main_service-label guarantee-label" tabindex="">Гарантия</label>
-                    <label for="loan-slide" class="main_service-label loan-label" tabindex="">Кредит</label>
+                    <label for="delivery-slide" class="main_service-label delivery-label" tabindex="20">Доставка</label>
+                    <label for="guarantee-slide" class="main_service-label guarantee-label" tabindex="21">Гарантия</label>
+                    <label for="loan-slide" class="main_service-label loan-label" tabindex="22">Кредит</label>
                 </div>
                 <div class="main_service-stripe"></div>
                 <ul class="main_service-list">
@@ -388,7 +388,7 @@
           <textarea class="mail-form-textarea" rows="5" id="mail-text" placeholder="В свободной форме"></textarea>
         </div>
         <div class="form-block form-block-full form-block__button">
-          <button class="button" type="submil">
+          <button class="button" type="submit">
             <span class="send-button-text">Отправить</span>
           </button>
         </div>
