Подогнано под пиксельпёрфект

--- a/catalog.html
+++ b/catalog.html
@@ -112,7 +112,7 @@
     	<h1 class="page-title">Перфораторы</h1>
 
     	<div class="calalog-flex-container">
-        <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+        <form class="filter" method="post" action="https://echo.htmlacademy.ru">
           <h3 class="catalog-filter-title">Фильтр:</h3>
           <div class="catalog-filter-price">
     		    <h4 class="catalog-filter_section-title">Цена:</h4>
