--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     	  <div class="main-contacts">
     		  <h2 class="main_information-title">Контакты</h2>
     		  <p class="main_information-paragraph">Вы можете забрать товар сами, <br> заехав в наш офис:</p>
-          <a class="main_information-map-small" href="#" title="Карта">
+          <a class="main_information-map-small" href="maps.yandex.ru" target="_blank" title="Карта">
               <img src="img/map-small.jpg" width="300" height="158" alt="Карта">
           </a>
     		  <a class="button" href="send-mail.html" title="Заблудились? Напишите нам!">Заблудились? Напишите нам!</a>
@@ -394,9 +394,9 @@
         </div>
         <button class="close-button" type="button" title="Закрыть"></button>
       </form>
-    </section>
+    <!-- </section>
 
-    <section class="modal-container" id="map_index">
+    <section class="modal-container" id="map_index"> -->
       <div class="modal modal-map">
       <img src="img/map.jpg" width="940" height="446" alt="Офис компании знаходится по адресу ул. Большая Конюшенная 19/8, город Санкт-Петербург">
       <button class="close-button" type="button" title="Закрыть"></button>
