--- a/index.html
+++ b/index.html
@@ -77,37 +77,36 @@
     <main>
       <div class="main_products-menu container">
           <div class="main_products-menu_item products-menu_materials">
+            <div class="text-flex-item">
               <h3 class="main_products-menu_item-title">Материалы</h3>
-              <img src="img/icon-1.svg" width="44" height="65" alt="Материалы">
               <a class="main_products-menu_button" href="materials.html" title="Материалы">На любой вкус</a>
+            </div>
+            <img src="img/icon-1.svg" width="44" height="65" alt="Материалы">
               <img src="img/new-flag.png" class="new-flag" width="60" height="60" alt="Новый товар">
           </div>
           <div class="main_products-menu_item products-menu_tools">
+            <div class="text-flex-item">
               <h3 class="main_products-menu_item-title">Инструмент</h3>
-              <img src="img/icon-2.svg" width="75" height="61" alt="Инструмент">
               <a class="main_products-menu_button" href="tools.html" title="Инструмент">На все случаи</a>
+            </div>
+            <img src="img/icon-2.svg" width="75" height="61" alt="Инструмент">
           </div>
           <div class="main_products-menu_item products-menu_machinery">
+            <div class="text-flex-item">
               <h3 class="main_products-menu_item-title">Техника</h3>
-              <img src="img/icon-3.svg" width="78" height="62" alt="Техника">
               <a class="main_products-menu_button" href="machinery.html" title="Техника">Для стройки</a>
+            </div>
+            <img src="img/icon-3.svg" width="78" height="62" alt="Техника">
           </div>
-          <div class="main_products-menu_item products-menu_sales">
-              <h3 class="main_products-menu_item-title">Скидки 50%</h3>
-              <img src="img/icon-4.svg" width="59" height="72" alt="Скидки 50%">
-              <a class="main_products-menu_button" href="sales.html" title="Скидки 50%">На 350 товаров</a>
-          </div>
-          <div class="main_products-menu_item products-menu_delivery">
-              <h3 class="main_products-menu_item-title">Доставка</h3>
-              <img src="img/icon-5.svg" width="78" height="63" alt="Доставка">
-              <a class="main_products-menu_button" href="delivery.html" title="Доставка">Бесплатно</a>
-          </div>
+          
           <div class="main_products-menu_slider">
             <!--
             <img src="img/icon-left.svg" height="40" width="22" alt="Стрелка влево">
             <img src="img/icon-right.svg" height="40" width="22" alt="Стрелка вправо">  -->
-            <button type="button" class="slide-left" aria-label="Стрелка влево"> влево </button>
-            <button type="button" class="slide-right" aria-label="Стрелка вправо"> вправо </button>
+            <button type="button" class="slide-left" aria-label="Стрелка влево"> 
+            <img src="img/icon-left.svg"> </button>
+            <button type="button" class="slide-right" aria-label="Стрелка вправо"> 
+            <img src="img/icon-right.svg"> </button>
             <div class="slider-rounds">
               <div class="round round1 active"></div>
               <div class="round round2"></div>
@@ -116,14 +115,31 @@
             <div class="slide drill-slide">
                 <h3 class="main_products-menu_slider-title">Дрели</h3>
                 <p class="main_products-menu_slider-description">Соседям на радость!</p>
-                <img src="img/drill.jpg" width="620" height="266" alt="Дрели">
+                <!-- <img src="img/drill.jpg" width="620" height="266" alt="Дрели"> -->
             </div>
             <div class="slide perforator-slide">
                 <h3 class="main_products-menu_slider-title">Перфораторы</h3>
                 <p class="main_products-menu_slider-description">Настоящие мужские игрушки</p>
-                <img src="img/perforator.jpg" width="620" height="266" alt="Перфораторы">
+               <!-- <img src="img/perforator.jpg" width="620" height="266" alt="Перфораторы"> -->
             </div>
-            <a class="button" href="catalog.html" title="Открыть каталог">Открыть каталог</a>
+            <a class="button menu-slider-button" href="catalog.html" title="Открыть каталог">Открыть каталог</a>
+          </div>
+
+          <div class="main_products-menu-flex">
+            <div class="main_products-menu_item products-menu_sales">
+              <div class="text-flex-item">
+                <h3 class="main_products-menu_item-title">Скидки 50%</h3>
+                <a class="main_products-menu_button" href="sales.html" title="Скидки 50%">На 350 товаров</a>
+              </div>
+              <img src="img/icon-4.svg" width="59" height="72" alt="Скидки 50%">
+            </div>
+            <div class="main_products-menu_item products-menu_delivery">
+              <div class="text-flex-item">
+                <h3 class="main_products-menu_item-title">Доставка</h3>
+                <a class="main_products-menu_button" href="delivery.html" title="Доставка">Бесплатно</a>
+              </div>
+              <img src="img/icon-5.svg" width="78" height="63" alt="Доставка">
+            </div>
           </div>
       </div>
 
@@ -252,20 +268,20 @@
                     <h3>Доставка</h3>
                     <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
                       <br>Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-                    <img src="img/delivery.png" width="468" height="261" alt="Доставка">
+                    <img src="img/delivery.png" class="delivery-image" width="468" height="261" alt="Доставка">
               </li>
               <li class="main_service-slide">
                     <h3>Гарантия</h3>
                     <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
                       <br>Дом уж восстановите как-нибудь сами.</p>
-                    <img src="img/guarantee.png" width="389" height="283" alt="Гарантия">
+                    <img src="img/guarantee.png" class="guarantee-image" width="389" height="283" alt="Гарантия">
               </li>
               <li class="main_service-slide">
                     <h3>Кредит</h3>
                     <p>Залезть в долговую яму стало проще! 
                       <br>Кредитные консультанты придут вам на помощь.</p>
                     <a class="button" href="#" title="Отправить заявку">Отправить заявку</a>
-                    <img src="img/loan.png" width="465" height="285" alt="Кредит">
+                    <img src="img/loan.png" class="loan-image" width="465" height="285" alt="Кредит">
               </li>
           </ul>
         </div>
