--- a/catalog.html
+++ b/catalog.html
@@ -390,7 +390,7 @@
       </div>
     </footer>
 
-    <section class="modal-container" id="modalcart_catalog">
+    <section class="modal-container modal-container-cart" id="modalcart_catalog">
      <div class="modal">
       <div class="modal-cart-top">
         <img src="img/added-to-cart.svg" width="66" height="66" alt="">
@@ -405,6 +405,8 @@
       </div>
      </div>
     </section>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
 
