Разметка изображений слайдера

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <img src="img/icon-left.svg" height="40" width="22" alt="Стрелка влево">
             <img src="img/icon-right.svg" height="40" width="22" alt="Стрелка вправо">  -->
             <button type="button" class="slide-left" aria-label="Стрелка влево"> 
-            <img src="img/icon-left.svg"> </button>
+            <img src="img/icon-left.svg" height="40" width="22" alt="Стрелка влево"> </button>
             <button type="button" class="slide-right" aria-label="Стрелка вправо"> 
-            <img src="img/icon-right.svg"> </button>
+            <img src="img/icon-right.svg" height="40" width="22" alt="Стрелка вправо"> </button>
             <div class="slider-rounds">
               <div class="round round1 active"></div>
               <div class="round round2"></div>
